methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:33: error: not found: value color
  faireV(color.YELLOW)
         ^MethodsPicture:34: error: not found: value color
  faireV(color.RED)
         ^MethodsPicture:35: error: not found: value color
  faireV(color.BLUE)
         ^MethodsPicture:36: error: not found: value color
  faireV(color.GREEN)
         ^